<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">音乐播放器</string>
    <string name="song_name">歌曲名称</string>
    <string name="more">更多</string>
    <string name="about">关于</string>
    <string name="local_all_music">本地所有音乐</string>
    <string name="search">搜索</string>
    <string name="root">根目录</string>
    <string name="play">播放</string>
    <string name="song">歌曲</string>
    <string name="singer">歌手</string>
    <string name="unknown_singer">未知歌手</string>
    <string name="loop_play">循环播放</string>
    <string name="single_loop">单曲循环</string>
    <string name="random_play">随机播放</string>
    <string name="order_play">顺序播放</string>
    <string name="album">专辑</string>
    <string name="play_list">播放列表</string>
    <string name="edit">编辑</string>
    <string name="add_new_playlist">新增播放列表</string>
    <string name="all_pick">全选</string>
    <string name="share">分享</string>
    <string name="delete">删除</string>
    <string name="detail_info">详细信息</string>
    <string name="detail">详情</string>
    <string name="look_detail">查看详情</string>
    <string name="song_words">歌词</string>
    <string name="version">版本:</string>
    <string name="developer">开发者:</string>
    <string name="colon">:</string>
    <string name="elastos_os">"Elastos OS"</string>

</resources>